--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "ecadb752",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "7a9de9ec",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "5c44c547",
    "metadata": {},
    "outputs": [
@@ -44,13 +44,21 @@
       "\n",
       "Sub_judul: Karena memaksakan Makan Bergizi Gratis pemerintah berpeluang mengeliminasi program-program prioritas lain yang tak kalah penting.\n",
       "\n",
-      "Isi: Sekretariat Nasional Forum Indonesia untuk Transparansi Anggaran (Seknas Fitra) mengkritik programMakan Bergizi Gratis(MBG) yang diproyeksikan menelan biaya hingga Rp 217,8 triliun. Dengan anggaran sebesar itu, program ini dinilai belum mampu mendorong pertumbuhan ekonomi yang stagnan di angka 4,87 persen pada kuartal I 2025. \"Program MBG yang digadang akan memberikan multiplier effect pada sektor UMKM, petani, peternak dan nelayan justru belum dapat mendongkrak pertumbuhan ekonomi,\" ujar Sekretaris Jenderal Seknas Fitra, Misbah Hasan, dalam diskusi yang disiarkan secara daring, Jumat, 23 Mei 2025. Misbah menilai pemerintah perlu legawa mengakui masih banyak persoalan dalam pelaksanaan program ini. Dengan pengakuan itu, pemerintah bisa segera melakukan evaluasi dan perbaikan, bahkan menghentikan program jika terbukti tidak efektif. Apalagi menurutnya program ini sudah mengambil porsi terbesar dalam struktur belanja Anggaran Pendapatan dan Belanja Negara (APBN) 2026. Ia menyebut MBG sebagai kebijakan yang 'jauh panggang di atas api dari prinsip produktif'. Alih-alih memberi dampak nyata, beban anggaran yang besar justru mempersempit ruang fiskal pemerintah. Menurut Misbah, karena terlalu dipaksakan, program MBG berpotensi mengorbankan program-program prioritas lain yang tak kalah penting seperti pembangunan infrastruktur, upaya mitigasi perubahan iklim, dan layanan dasar bagi masyarakat. Ia juga menyoroti indikasi pemborosan anggaran. Dalam Kerangka Ekonomi Makro dan Pokok-Pokok Kebijakan Fiskal (KEM-PPKF) 2026, pemerintah semestinya mendorong efisiensi dan peningkatan belanja produktif. Semangat itu telah ditegaskan dalam Instruksi Presiden Nomor 1 Tahun 2025, namun implementasi kebijakan belanja justru belum sepenuhnya sejalan dengan prinsip produktif, efektif, dan efisien. Misbah menyinggung Instruksi Presiden Nomor 9 Tahun 2025 tentang Percepatan Pembentukan Koperasi Desa/Kelurahan Merah Putih yang menargetkan pembentukan 80.000 koperasi dengan alokasi anggaran sebesar Rp 400 triliun. Ia menilai program tersebut berpotensi menjadi beban berat bagi APBN 2026, apalagi program ini tidak termasuk dalam janji kampanye. \"Pemerintah harus fokus pada belanja-belanja publik untuk memastikan hak-hak masyarakat untuk mendapatkan pelayanan dasar terpenuhi. Pemerintah juga harus fokus pada belanja-belanja yang mendorong pertumbuhan ekonomi, iklim investasi, peningkatan sumber daya manusia dan pengentasan kemiskinan,\" tegasnya. Misbah pun merekomendasikan agar program seperti MBG, yang menyerap anggaran sangat besar namun kontribusinya minim terhadap pertumbuhan ekonomi, segera dievaluasi. \"Namun apabila program ini harus dilaksanakan sebagai janji kampanye Presiden Prabowo Subianto, maka hanya perlu dilakukan di daerah-daerah dengan tingkat status gizi dan kesehatan anak yang rendah,\" ujarnya.\n",
-      "\n",
       "Tanggal: 24 Mei 2025\n",
       "\n",
       "Jam: 17.24 WIB\n",
       "\n",
       "Kategori: Bisnis\n",
+      "\n",
+      "Isi: TEMPO.CO,Jakarta-Sekretariat Nasional Forum Indonesia untuk Transparansi Anggaran (Seknas Fitra) mengkritik programMakan Bergizi Gratis(MBG) yang diproyeksikan menelan biaya hingga Rp 217,8 triliun. Dengan anggaran sebesar itu, program ini dinilai belum mampu mendorong pertumbuhan ekonomi yang stagnan di angka 4,87 persen pada kuartal I 2025.\"Program MBG yang digadang akan memberikan multiplier effect pada sektor UMKM, petani, peternak dan nelayan justru belum dapat mendongkrak pertumbuhan ekonomi,\" ujar Sekretaris Jenderal Seknas Fitra, Misbah Hasan, dalam diskusi yang disiarkan secara daring, Jumat, 23 Mei 2025.\n",
+      "\n",
+      "Misbah menilai pemerintah perlu legawa mengakui masih banyak persoalan dalam pelaksanaan program ini. Dengan pengakuan itu, pemerintah bisa segera melakukan evaluasi dan perbaikan, bahkan menghentikan program jika terbukti tidak efektif. Apalagi menurutnya program ini sudah mengambil porsi terbesar dalam struktur belanja Anggaran Pendapatan dan Belanja Negara (APBN) 2026.\n",
+      "\n",
+      "Ia menyebut MBG sebagai kebijakan yang 'jauh panggang di atas api dari prinsip produktif'. Alih-alih memberi dampak nyata, beban anggaran yang besar justru mempersempit ruang fiskal pemerintah.\n",
+      "\n",
+      "Menurut Misbah, karena terlalu dipaksakan, program MBG berpotensi mengorbankan program-program prioritas lain yang tak kalah penting seperti pembangunan infrastruktur, upaya mitigasi perubahan iklim, dan layanan dasar bagi masyarakat.\n",
+      "\n",
+      "Ia juga menyoroti indikasi pemborosan anggaran. Dalam Kerangka Ekonomi Makro dan Pokok-Pokok Kebijakan Fiskal (KEM-PPKF) 2026, pemerintah semestinya mendorong efisiensi dan peningkatan belanja produktif. Semangat itu telah ditegaskan dalam Instruksi Presiden Nomor 1 Tahun 2025, namun implementasi kebijakan belanja justru belum sepenuhnya sejalan dengan prinsip produktif, efektif, dan efisien.\n",
       "\n"
      ]
     }
@@ -65,9 +73,18 @@
     "hasil['sub_judul'] = sub_judul.get_text(strip=True) if sub_judul else 'Tidak ditemukan'\n",
     "\n",
     "# Mendapatkan isi berita\n",
-    "isi_berita = soup.find_all('span', attrs={'style':'font-weight: 400;'})\n",
-    "ringkasan = ' '.join([isi.get_text(strip=True) for isi in isi_berita])\n",
+    "isi_paragraf = []\n",
+    "isi_berita = soup.find_all('div', id='content-wrapper', class_='max-lg:container xl')\n",
+    "\n",
+    "for i in isi_berita:\n",
+    "    paragraf = i.find_all('p')\n",
+    "    for p in paragraf:\n",
+    "        teks = p.get_text(strip=True)\n",
+    "        if teks:  #menambahkan teks bila ada\n",
+    "            isi_paragraf.append(teks)\n",
+    "ringkasan = '\\n\\n'.join(isi_paragraf)\n",
     "hasil['isi'] = ringkasan if ringkasan else 'Tidak ditemukan'\n",
+    "\n",
     "\n",
     "# Mendapatkan tanggal publikasi\n",
     "tanggal_publikasi = soup.find('p', class_='text-neutral-900 text-sm').get_text(strip=True)\n",
@@ -86,76 +103,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "0015b7b8",
+   "cell_type": "markdown",
+   "id": "9e69914a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>judul</th>\n",
-       "      <th>sub_judul</th>\n",
-       "      <th>isi</th>\n",
-       "      <th>tanggal</th>\n",
-       "      <th>jam</th>\n",
-       "      <th>kategori</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Seknas Fitra: Makan Bergizi Gratis Belum Dongk...</td>\n",
-       "      <td>Karena memaksakan Makan Bergizi Gratis pemerin...</td>\n",
-       "      <td>Sekretariat Nasional Forum Indonesia untuk Tra...</td>\n",
-       "      <td>24 Mei 2025</td>\n",
-       "      <td>17.24 WIB</td>\n",
-       "      <td>Bisnis</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               judul  \\\n",
-       "0  Seknas Fitra: Makan Bergizi Gratis Belum Dongk...   \n",
-       "\n",
-       "                                           sub_judul  \\\n",
-       "0  Karena memaksakan Makan Bergizi Gratis pemerin...   \n",
-       "\n",
-       "                                                 isi      tanggal        jam  \\\n",
-       "0  Sekretariat Nasional Forum Indonesia untuk Tra...  24 Mei 2025  17.24 WIB   \n",
-       "\n",
-       "  kategori  \n",
-       "0   Bisnis  "
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df = pd.DataFrame([hasil])\n",
-    "df"
+    "# Tidy up with function"
    ]
   },
   {
@@ -169,7 +121,7 @@
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
     "\n",
-    "def scrape_tempo(url):\n",
+    "def scrape_tempo(url) -> str:\n",
     "    # Inisialisasi dictionary hasil\n",
     "    hasil = {}\n",
     "\n",
@@ -186,10 +138,17 @@
     "        hasil['sub_judul'] = sub_judul.get_text(strip=True) if sub_judul else 'Tidak ditemukan'\n",
     "\n",
     "        # Isi berita\n",
-    "        isi_berita = soup.find_all('span', attrs={'style': 'font-weight: 400;'})\n",
-    "        ringkasan = ' '.join([isi.get_text(strip=True) for isi in isi_berita])\n",
+    "        isi_paragraf = []\n",
+    "        isi_berita = soup.find_all('div', id='content-wrapper', class_='max-lg:container xl')\n",
+    "\n",
+    "        for i in isi_berita:\n",
+    "            paragraf = i.find_all('p')\n",
+    "            for p in paragraf:\n",
+    "                teks = p.get_text(strip=True)\n",
+    "                if teks:  #menambahkan teks bila ada\n",
+    "                    isi_paragraf.append(teks)\n",
+    "        ringkasan = '\\n\\n'.join(isi_paragraf)\n",
     "        hasil['isi'] = ringkasan if ringkasan else 'Tidak ditemukan'\n",
-    "        \n",
     "\n",
     "        # Tanggal & Jam publikasi\n",
     "        tanggal_publikasi = soup.find('p', class_='text-neutral-900 text-sm')\n",
@@ -221,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 144,
    "id": "0a04d85e",
    "metadata": {},
    "outputs": [
@@ -259,7 +218,7 @@
        "      <th>0</th>\n",
        "      <td>Potensi Masalah dari Rencana Pemerintah Ubah L...</td>\n",
        "      <td>Rencana ini berpotensi melanggar hak asasi par...</td>\n",
-       "      <td>Tidak ditemukan</td>\n",
+       "      <td>TEMPO.CO,Jakarta- Menteri Perumahan dan Kawasa...</td>\n",
        "      <td>24 Mei 2025</td>\n",
        "      <td>21.00 WIB</td>\n",
        "      <td>Bisnis</td>\n",
@@ -272,14 +231,17 @@
        "                                               judul  \\\n",
        "0  Potensi Masalah dari Rencana Pemerintah Ubah L...   \n",
        "\n",
-       "                                           sub_judul              isi  \\\n",
-       "0  Rencana ini berpotensi melanggar hak asasi par...  Tidak ditemukan   \n",
+       "                                           sub_judul  \\\n",
+       "0  Rencana ini berpotensi melanggar hak asasi par...   \n",
        "\n",
-       "       tanggal        jam kategori  \n",
-       "0  24 Mei 2025  21.00 WIB   Bisnis  "
+       "                                                 isi      tanggal        jam  \\\n",
+       "0  TEMPO.CO,Jakarta- Menteri Perumahan dan Kawasa...  24 Mei 2025  21.00 WIB   \n",
+       "\n",
+       "  kategori  \n",
+       "0   Bisnis  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
