--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -1,113 +1,63 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "ecadb752",
+   "cell_type": "markdown",
+   "id": "3fabefde",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "from bs4 import BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "7a9de9ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# URL artikel yang akan di-scrape\n",
-    "url = 'https://www.tempo.co/ekonomi/seknas-fitra-makan-bergizi-gratis-belum-dongkrak-pertumbuhan-ekonomi-1533866'\n",
-    "\n",
-    "# Mengirim permintaan HTTP ke URL\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "\n",
-    "# Menyimpan hasil scraping di dictionary\n",
-    "hasil = {}"
+    "## 0. Requirement"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c44c547",
+   "id": "ecadb752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## global\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "## selenium\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from urllib.parse import quote_plus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f23bd6ba",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Judul: Seknas Fitra: Makan Bergizi Gratis Belum Dongkrak Pertumbuhan Ekonomi\n",
-      "\n",
-      "Sub_judul: Karena memaksakan Makan Bergizi Gratis pemerintah berpeluang mengeliminasi program-program prioritas lain yang tak kalah penting.\n",
-      "\n",
-      "Tanggal: 24 Mei 2025\n",
-      "\n",
-      "Jam: 17.24 WIB\n",
-      "\n",
-      "Kategori: Bisnis\n",
-      "\n",
-      "Isi: TEMPO.CO,Jakarta-Sekretariat Nasional Forum Indonesia untuk Transparansi Anggaran (Seknas Fitra) mengkritik programMakan Bergizi Gratis(MBG) yang diproyeksikan menelan biaya hingga Rp 217,8 triliun. Dengan anggaran sebesar itu, program ini dinilai belum mampu mendorong pertumbuhan ekonomi yang stagnan di angka 4,87 persen pada kuartal I 2025.\"Program MBG yang digadang akan memberikan multiplier effect pada sektor UMKM, petani, peternak dan nelayan justru belum dapat mendongkrak pertumbuhan ekonomi,\" ujar Sekretaris Jenderal Seknas Fitra, Misbah Hasan, dalam diskusi yang disiarkan secara daring, Jumat, 23 Mei 2025.\n",
-      "\n",
-      "Misbah menilai pemerintah perlu legawa mengakui masih banyak persoalan dalam pelaksanaan program ini. Dengan pengakuan itu, pemerintah bisa segera melakukan evaluasi dan perbaikan, bahkan menghentikan program jika terbukti tidak efektif. Apalagi menurutnya program ini sudah mengambil porsi terbesar dalam struktur belanja Anggaran Pendapatan dan Belanja Negara (APBN) 2026.\n",
-      "\n",
-      "Ia menyebut MBG sebagai kebijakan yang 'jauh panggang di atas api dari prinsip produktif'. Alih-alih memberi dampak nyata, beban anggaran yang besar justru mempersempit ruang fiskal pemerintah.\n",
-      "\n",
-      "Menurut Misbah, karena terlalu dipaksakan, program MBG berpotensi mengorbankan program-program prioritas lain yang tak kalah penting seperti pembangunan infrastruktur, upaya mitigasi perubahan iklim, dan layanan dasar bagi masyarakat.\n",
-      "\n",
-      "Ia juga menyoroti indikasi pemborosan anggaran. Dalam Kerangka Ekonomi Makro dan Pokok-Pokok Kebijakan Fiskal (KEM-PPKF) 2026, pemerintah semestinya mendorong efisiensi dan peningkatan belanja produktif. Semangat itu telah ditegaskan dalam Instruksi Presiden Nomor 1 Tahun 2025, namun implementasi kebijakan belanja justru belum sepenuhnya sejalan dengan prinsip produktif, efektif, dan efisien.\n",
-      "\n"
+      "200\n"
      ]
     }
    ],
    "source": [
-    "# Mendapatkan judul berita\n",
-    "judul = soup.find('h1', class_='text-[26px] font-bold leading-[122%] text-neutral-1200')\n",
-    "hasil['judul'] = judul.get_text(strip=True) if judul else 'Tidak ditemukan'\n",
-    "\n",
-    "# Mendapatkan sub-judul berita\n",
-    "sub_judul = soup.find('div', class_='font-roboserif leading-[156%] text-neutral-1100')\n",
-    "hasil['sub_judul'] = sub_judul.get_text(strip=True) if sub_judul else 'Tidak ditemukan'\n",
-    "\n",
-    "# Mendapatkan isi berita\n",
-    "isi_paragraf = []\n",
-    "isi_berita = soup.find_all('div', id='content-wrapper', class_='max-lg:container xl')\n",
-    "\n",
-    "for i in isi_berita:\n",
-    "    paragraf = i.find_all('p')\n",
-    "    for p in paragraf:\n",
-    "        teks = p.get_text(strip=True)\n",
-    "        if teks:  #menambahkan teks bila ada\n",
-    "            isi_paragraf.append(teks)\n",
-    "ringkasan = '\\n\\n'.join(isi_paragraf)\n",
-    "hasil['isi'] = ringkasan if ringkasan else 'Tidak ditemukan'\n",
-    "\n",
-    "\n",
-    "# Mendapatkan tanggal publikasi\n",
-    "tanggal_publikasi = soup.find('p', class_='text-neutral-900 text-sm').get_text(strip=True)\n",
-    "if isinstance(tanggal_publikasi, str):\n",
-    "    tanggal, jam = [part.strip() for part in upload.split('|')]\n",
-    "hasil['tanggal'] = tanggal if tanggal else 'Tidak ditemukan'\n",
-    "hasil['jam'] = jam if jam else 'Tidak ditemukan'\n",
-    "\n",
-    "# Mendapatkan kategori berita\n",
-    "kategori = soup.find('span', class_='text-sm font-medium text-primary-main')\n",
-    "hasil['kategori'] = kategori.get_text(strip=True) if kategori else 'Tidak ditemukan' \n",
-    "\n",
-    "# Menampilkan hasil dari dictionary (kat = kategori, res = result)\n",
-    "for kat, res in hasil.items():\n",
-    "    print(f\"{kat.capitalize()}: {res}\\n\")"
+    "## check if there is a response, if it's 200, we are good to go\n",
+    "s = requests.Session()\n",
+    "url = 'https://www.tempo.co/search?q=makan+bergizi+gratis&page=1'\n",
+    "response = s.get(url)\n",
+    "print(response.status_code)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e69914a",
+   "id": "35d65819",
    "metadata": {},
    "source": [
-    "# Tidy up with function"
+    "## 1. Scraping satu artikel"
    ]
   },
   {
@@ -117,27 +67,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
-    "\n",
-    "def scrape_tempo(url) -> str:\n",
-    "    # Inisialisasi dictionary hasil\n",
+    "def scrape_tempo(url) -> pd.DataFrame: ##Fungsi melakukan scraping data 1 halaman Tempo, masukkan string url\n",
+    "    ## Inisiasi dictionary hasil\n",
     "    hasil = {}\n",
     "\n",
     "    try:\n",
     "        response = requests.get(url)\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "        # Judul\n",
+    "        ##Judul\n",
     "        judul = soup.find('h1', class_='text-[26px] font-bold leading-[122%] text-neutral-1200')\n",
     "        hasil['judul'] = judul.get_text(strip=True) if judul else 'Tidak ditemukan'\n",
     "\n",
-    "        # Sub judul\n",
+    "        ## Sub judul\n",
     "        sub_judul = soup.find('div', class_='font-roboserif leading-[156%] text-neutral-1100')\n",
     "        hasil['sub_judul'] = sub_judul.get_text(strip=True) if sub_judul else 'Tidak ditemukan'\n",
     "\n",
-    "        # Isi berita\n",
+    "        ## Isi berita\n",
     "        isi_paragraf = []\n",
     "        isi_berita = soup.find_all('div', id='content-wrapper', class_='max-lg:container xl')\n",
     "\n",
@@ -150,7 +96,7 @@
     "        ringkasan = '\\n\\n'.join(isi_paragraf)\n",
     "        hasil['isi'] = ringkasan if ringkasan else 'Tidak ditemukan'\n",
     "\n",
-    "        # Tanggal & Jam publikasi\n",
+    "        ## Tanggal & Jam publikasi\n",
     "        tanggal_publikasi = soup.find('p', class_='text-neutral-900 text-sm')\n",
     "        if tanggal_publikasi:\n",
     "            waktu = tanggal_publikasi.get_text(strip=True)\n",
@@ -165,7 +111,7 @@
     "            hasil['tanggal'] = 'Tidak ditemukan'\n",
     "            hasil['jam'] = 'Tidak ditemukan'\n",
     "\n",
-    "        # Kategori\n",
+    "        ## Kategori\n",
     "        kategori = soup.find('span', class_='text-sm font-medium text-primary-main')\n",
     "        hasil['kategori'] = kategori.get_text(strip=True) if kategori else 'Tidak ditemukan'\n",
     "\n",
@@ -173,17 +119,26 @@
     "        print(f\"Terjadi kesalahan saat scraping: {e}\")\n",
     "        return None\n",
     "\n",
-    "    # Kembalikan juga sebagai DataFrame\n",
+    "    ## Kembalikan juga sebagai DataFrame\n",
     "    df = pd.DataFrame([hasil])\n",
+    "    df.to_csv('./files/tempo_satu_artikel.csv', index=False, encoding='utf-8-sig')\n",
+    "    print('selesai scraping')\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 63,
    "id": "0a04d85e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "selesai scraping\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -241,7 +196,7 @@
        "0   Bisnis  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,20 +208,256 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54c6643f",
+   "cell_type": "markdown",
+   "id": "1679f977",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# extract file ke csv\n",
-    "df_hasil.to_csv('tempo_artikel.csv', index=False, encoding='utf-8-sig')"
+    "## 2. Crawling urls\n",
+    "pakai javascript"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ef4e5f6",
+   "id": "4c64e6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc8954ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scrape_tempo_search_selenium(kata_kunci, halaman) -> pd.DataFrame:\n",
+    "    # Set User-Agent\n",
+    "    user_agent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36'\n",
+    "    opts = Options()\n",
+    "    opts.add_argument(f\"user-agent={user_agent}\")\n",
+    "    opts.add_argument(\"--headless\")\n",
+    "    opts.add_argument(\"--no-sanbox\")\n",
+    "    opts.add_argument(\"--disable-dev-shm-usage\")\n",
+    "\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=opts)\n",
+    "        \n",
+    "    # Parameter input\n",
+    "    keyword = kata_kunci #contoh: \"makan bergizi gratis\"\n",
+    "    max_pages = halaman #contoh: 2\n",
+    "    results = []\n",
+    "\n",
+    "    # Loop halaman\n",
+    "    for page in range(1, max_pages + 1):\n",
+    "        print(f\"Scraping page {page}...\")\n",
+    "\n",
+    "        # Format URL pencarian\n",
+    "        encoded_query = quote_plus(keyword)\n",
+    "        url = f\"https://www.tempo.co/search?q={encoded_query}&page={page}\"\n",
+    "        \n",
+    "        driver.get(url)\n",
+    "        time.sleep(10)\n",
+    "\n",
+    "        try:\n",
+    "            container = driver.find_element(\"css selector\", \"div.flex.flex-col.divide-y.divide-neutral-500\")\n",
+    "            beritas = container.find_elements(\"css selector\", \"figure.flex.flex-row.gap-3.py-4.container.lg\\\\:mx-0.lg\\\\:px-0\")\n",
+    "            for berita in beritas:\n",
+    "                try:\n",
+    "                    a = berita.find_element(\"tag name\", \"a\")\n",
+    "                    p = berita.find_element(\"tag name\", \"p\")\n",
+    "                    results.append({\n",
+    "                        \"judul\": p.text,\n",
+    "                        \"link\": a.get_attribute(\"href\")\n",
+    "                    })\n",
+    "                except Exception as e:\n",
+    "                    print(\"Skip 1 berita:\", e)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(\"Skip page:\", e)\n",
+    "\n",
+    "    driver.quit()\n",
+    "\n",
+    "    # Simpan ke DataFrame\n",
+    "    df = pd.DataFrame(results)\n",
+    "    df.to_csv(\"./files/tempo_all.csv\", index=False, encoding='utf-8-sig')\n",
+    "    print(\"Selesai. Total berita:\", len(df))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "46b6ac67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scraping page 1...\n",
+      "Scraping page 2...\n",
+      "Scraping page 3...\n",
+      "Scraping page 4...\n",
+      "Scraping page 5...\n",
+      "Scraping page 6...\n",
+      "Scraping page 7...\n",
+      "Scraping page 8...\n",
+      "Scraping page 9...\n",
+      "Scraping page 10...\n",
+      "Selesai. Total berita: 100\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>judul</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Seknas Fitra: Makan Bergizi Gratis Belum Dongk...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/seknas-fitra-maka...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hingga 21 Mei, Anggaran Makan Bergizi Gratis S...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/hingga-21-mei-ang...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Korban Keracunan MBG Lebih Besar dari Klaim Pr...</td>\n",
+       "      <td>https://www.tempo.co/politik/korban-keracunan-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sejumlah Titik Kritis dalam Program MBG, Menur...</td>\n",
+       "      <td>https://www.tempo.co/politik/sejumlah-titik-kr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bos BGN Membantah Raffi Ahmad Kelola 300 Dapur...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/bos-bgn-membantah...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Penerima Manfaat Makan Bergizi Gratis hingga M...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/penerima-manfaat-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Peluncuran Dapur Satuan Pelayanan Pemenuhan Gizi</td>\n",
+       "      <td>https://www.tempo.co/foto/arsip/peluncuran-dap...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Cari Sebab Penerimaan Pajak Anjlok: Salah Satu...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/cari-sebab-peneri...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Diskon Tarif Listrik Dinilai sebagai Kebijakan...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/diskon-tarif-list...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Alasan Anindya Bakrie Kukuhkan Sebanyak 2.800 ...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/alasan-anindya-ba...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                judul  \\\n",
+       "0   Seknas Fitra: Makan Bergizi Gratis Belum Dongk...   \n",
+       "1   Hingga 21 Mei, Anggaran Makan Bergizi Gratis S...   \n",
+       "2   Korban Keracunan MBG Lebih Besar dari Klaim Pr...   \n",
+       "3   Sejumlah Titik Kritis dalam Program MBG, Menur...   \n",
+       "4   Bos BGN Membantah Raffi Ahmad Kelola 300 Dapur...   \n",
+       "..                                                ...   \n",
+       "95  Penerima Manfaat Makan Bergizi Gratis hingga M...   \n",
+       "96   Peluncuran Dapur Satuan Pelayanan Pemenuhan Gizi   \n",
+       "97  Cari Sebab Penerimaan Pajak Anjlok: Salah Satu...   \n",
+       "98  Diskon Tarif Listrik Dinilai sebagai Kebijakan...   \n",
+       "99  Alasan Anindya Bakrie Kukuhkan Sebanyak 2.800 ...   \n",
+       "\n",
+       "                                                 link  \n",
+       "0   https://www.tempo.co/ekonomi/seknas-fitra-maka...  \n",
+       "1   https://www.tempo.co/ekonomi/hingga-21-mei-ang...  \n",
+       "2   https://www.tempo.co/politik/korban-keracunan-...  \n",
+       "3   https://www.tempo.co/politik/sejumlah-titik-kr...  \n",
+       "4   https://www.tempo.co/ekonomi/bos-bgn-membantah...  \n",
+       "..                                                ...  \n",
+       "95  https://www.tempo.co/ekonomi/penerima-manfaat-...  \n",
+       "96  https://www.tempo.co/foto/arsip/peluncuran-dap...  \n",
+       "97  https://www.tempo.co/ekonomi/cari-sebab-peneri...  \n",
+       "98  https://www.tempo.co/ekonomi/diskon-tarif-list...  \n",
+       "99  https://www.tempo.co/ekonomi/alasan-anindya-ba...  \n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrape_tempo_search_selenium(\"makan bergizi gratis\", 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f64e6359",
+   "metadata": {},
+   "source": [
+    "## 3. Scraping artikel dalam links"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5203ac",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b16d691",
    "metadata": {},
    "outputs": [],
    "source": []
