--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ecadb752",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "f23bd6ba",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0b3bb7b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape_tempo(url) -> pd.DataFrame: ##Fungsi melakukan scraping data 1 halaman Tempo, masukkan string url\n",
+    "def scrape_tempo(url: str) -> pd.DataFrame: ##Fungsi melakukan scraping data 1 halaman Tempo, masukkan string url\n",
     "    ## Inisiasi dictionary hasil\n",
     "    hasil = {}\n",
     "\n",
@@ -115,30 +115,25 @@
     "        kategori = soup.find('span', class_='text-sm font-medium text-primary-main')\n",
     "        hasil['kategori'] = kategori.get_text(strip=True) if kategori else 'Tidak ditemukan'\n",
     "\n",
+    "        ## Link\n",
+    "        hasil['link'] = url \n",
+    "\n",
     "    except Exception as e:\n",
     "        print(f\"Terjadi kesalahan saat scraping: {e}\")\n",
     "        return None\n",
     "\n",
     "    ## Kembalikan juga sebagai DataFrame\n",
     "    df = pd.DataFrame([hasil])\n",
-    "    df.to_csv('./files/tempo_satu_artikel.csv', index=False, encoding='utf-8-sig')\n",
-    "    print('selesai scraping')\n",
+    "    # print('selesai scraping')\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "0a04d85e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "selesai scraping\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -166,6 +161,7 @@
        "      <th>tanggal</th>\n",
        "      <th>jam</th>\n",
        "      <th>kategori</th>\n",
+       "      <th>link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -177,6 +173,7 @@
        "      <td>24 Mei 2025</td>\n",
        "      <td>21.00 WIB</td>\n",
        "      <td>Bisnis</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/potensi-masalah-d...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,11 +189,11 @@
        "                                                 isi      tanggal        jam  \\\n",
        "0  TEMPO.CO,Jakarta- Menteri Perumahan dan Kawasa...  24 Mei 2025  21.00 WIB   \n",
        "\n",
-       "  kategori  \n",
-       "0   Bisnis  "
+       "  kategori                                               link  \n",
+       "0   Bisnis  https://www.tempo.co/ekonomi/potensi-masalah-d...  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,38 +205,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "868f5cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hasil.to_csv('./files/tempo_satu_artikel.csv', index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1679f977",
    "metadata": {},
    "source": [
-    "## 2. Crawling urls\n",
-    "pakai javascript"
+    "## 2. Crawling URLs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c64e6b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "bc8954ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape_tempo_search_selenium(kata_kunci, halaman) -> pd.DataFrame:\n",
+    "def scrape_tempo_search_selenium(kata_kunci: str, halaman: int) -> pd.DataFrame:\n",
     "    # Set User-Agent\n",
     "    user_agent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36'\n",
     "    opts = Options()\n",
@@ -256,8 +246,8 @@
     "    results = []\n",
     "\n",
     "    # Loop halaman\n",
-    "    for page in range(1, max_pages + 1):\n",
-    "        print(f\"Scraping page {page}...\")\n",
+    "    for page in tqdm(range(1, max_pages + 1)):\n",
+    "        # print(f\"Scraping page {page}...\")\n",
     "\n",
     "        # Format URL pencarian\n",
     "        encoded_query = quote_plus(keyword)\n",
@@ -287,31 +277,28 @@
     "\n",
     "    # Simpan ke DataFrame\n",
     "    df = pd.DataFrame(results)\n",
-    "    df.to_csv(\"./files/tempo_all.csv\", index=False, encoding='utf-8-sig')\n",
+    "    df.to_csv(\"./files/tempo_links.csv\", index=False, encoding='utf-8-sig')\n",
     "    print(\"Selesai. Total berita:\", len(df))\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "46b6ac67",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [02:23<00:00, 14.38s/it]\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scraping page 1...\n",
-      "Scraping page 2...\n",
-      "Scraping page 3...\n",
-      "Scraping page 4...\n",
-      "Scraping page 5...\n",
-      "Scraping page 6...\n",
-      "Scraping page 7...\n",
-      "Scraping page 8...\n",
-      "Scraping page 9...\n",
-      "Scraping page 10...\n",
       "Selesai. Total berita: 100\n"
      ]
     },
@@ -431,7 +418,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,15 +436,194 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5c5203ac",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b16d691",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def scrape_tempo_dari_csv(path_csv: str) -> pd.DataFrame:\n",
+    "    # Membaca CSV hasil scraping link\n",
+    "    df_links = pd.read_csv(path_csv)\n",
+    "\n",
+    "    # Memastikan kolom 'link' ada\n",
+    "    if 'link' not in df_links.columns:\n",
+    "        raise ValueError(\"CSV tidak mengandung kolom 'link'.\")\n",
+    "\n",
+    "    hasil_semua = []\n",
+    "    for i, row in tqdm(df_links.iterrows(), total=len(df_links)):\n",
+    "        url = row['link']\n",
+    "        df_artikel = scrape_tempo(url) #memanggil dan menjalankan fungsi scrape_tempo satu artikel\n",
+    "        if df_artikel is not None:\n",
+    "            hasil_semua.append(df_artikel)\n",
+    "\n",
+    "    # Gabungkan semua DataFrame\n",
+    "    if hasil_semua:\n",
+    "        df_final = pd.concat(hasil_semua, ignore_index=True)\n",
+    "        df_final.to_csv('./files/tempo_semua_artikel.csv', index=False, encoding='utf-8-sig')\n",
+    "        print(\"Selesai menyimpan semua artikel.\")\n",
+    "        return df_final\n",
+    "    else:\n",
+    "        print(\"Tidak ada artikel yang berhasil di-scrape.\")\n",
+    "        return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6de1ea70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [02:41<00:00,  1.61s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selesai menyimpan semua artikel.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>judul</th>\n",
+       "      <th>sub_judul</th>\n",
+       "      <th>isi</th>\n",
+       "      <th>tanggal</th>\n",
+       "      <th>jam</th>\n",
+       "      <th>kategori</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Seknas Fitra: Makan Bergizi Gratis Belum Dongk...</td>\n",
+       "      <td>Karena memaksakan Makan Bergizi Gratis pemerin...</td>\n",
+       "      <td>TEMPO.CO,Jakarta-Sekretariat Nasional Forum In...</td>\n",
+       "      <td>24 Mei 2025</td>\n",
+       "      <td>17.24 WIB</td>\n",
+       "      <td>Bisnis</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/seknas-fitra-maka...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hingga 21 Mei, Anggaran Makan Bergizi Gratis S...</td>\n",
+       "      <td>Hingga 21 Mei 2025 kementerian keuangan telah ...</td>\n",
+       "      <td>TEMPO.CO,Jakarta- Wakil Menteri Keuangan Suaha...</td>\n",
+       "      <td>23 Mei 2025</td>\n",
+       "      <td>16.11 WIB</td>\n",
+       "      <td>Bisnis</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/hingga-21-mei-ang...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Korban Keracunan MBG Lebih Besar dari Klaim Pr...</td>\n",
+       "      <td>Tim Cek Fakta Tempo menemukan angka keracunan ...</td>\n",
+       "      <td>TEMPO.CO,Jakarta-PRESIDEN Prabowo Subianto men...</td>\n",
+       "      <td>23 Mei 2025</td>\n",
+       "      <td>14.10 WIB</td>\n",
+       "      <td>Politik</td>\n",
+       "      <td>https://www.tempo.co/politik/korban-keracunan-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sejumlah Titik Kritis dalam Program MBG, Menur...</td>\n",
+       "      <td>Kepala BPOM mendorong keterlibatan instansinya...</td>\n",
+       "      <td>KOMISI IX DPR mendesak Badan Pengawas Obat dan...</td>\n",
+       "      <td>23 Mei 2025</td>\n",
+       "      <td>10.13 WIB</td>\n",
+       "      <td>Politik</td>\n",
+       "      <td>https://www.tempo.co/politik/sejumlah-titik-kr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bos BGN Membantah Raffi Ahmad Kelola 300 Dapur...</td>\n",
+       "      <td>Kabar Raffi Ahmad mendapatkan jatah mengelola ...</td>\n",
+       "      <td>TEMPO.CO,Jakarta- Kepala Badan Gizi Nasional (...</td>\n",
+       "      <td>22 Mei 2025</td>\n",
+       "      <td>19.30 WIB</td>\n",
+       "      <td>Bisnis</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/bos-bgn-membantah...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               judul  \\\n",
+       "0  Seknas Fitra: Makan Bergizi Gratis Belum Dongk...   \n",
+       "1  Hingga 21 Mei, Anggaran Makan Bergizi Gratis S...   \n",
+       "2  Korban Keracunan MBG Lebih Besar dari Klaim Pr...   \n",
+       "3  Sejumlah Titik Kritis dalam Program MBG, Menur...   \n",
+       "4  Bos BGN Membantah Raffi Ahmad Kelola 300 Dapur...   \n",
+       "\n",
+       "                                           sub_judul  \\\n",
+       "0  Karena memaksakan Makan Bergizi Gratis pemerin...   \n",
+       "1  Hingga 21 Mei 2025 kementerian keuangan telah ...   \n",
+       "2  Tim Cek Fakta Tempo menemukan angka keracunan ...   \n",
+       "3  Kepala BPOM mendorong keterlibatan instansinya...   \n",
+       "4  Kabar Raffi Ahmad mendapatkan jatah mengelola ...   \n",
+       "\n",
+       "                                                 isi      tanggal        jam  \\\n",
+       "0  TEMPO.CO,Jakarta-Sekretariat Nasional Forum In...  24 Mei 2025  17.24 WIB   \n",
+       "1  TEMPO.CO,Jakarta- Wakil Menteri Keuangan Suaha...  23 Mei 2025  16.11 WIB   \n",
+       "2  TEMPO.CO,Jakarta-PRESIDEN Prabowo Subianto men...  23 Mei 2025  14.10 WIB   \n",
+       "3  KOMISI IX DPR mendesak Badan Pengawas Obat dan...  23 Mei 2025  10.13 WIB   \n",
+       "4  TEMPO.CO,Jakarta- Kepala Badan Gizi Nasional (...  22 Mei 2025  19.30 WIB   \n",
+       "\n",
+       "  kategori                                               link  \n",
+       "0   Bisnis  https://www.tempo.co/ekonomi/seknas-fitra-maka...  \n",
+       "1   Bisnis  https://www.tempo.co/ekonomi/hingga-21-mei-ang...  \n",
+       "2  Politik  https://www.tempo.co/politik/korban-keracunan-...  \n",
+       "3  Politik  https://www.tempo.co/politik/sejumlah-titik-kr...  \n",
+       "4   Bisnis  https://www.tempo.co/ekonomi/bos-bgn-membantah...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = scrape_tempo_dari_csv(\"./files/tempo_links.csv\")\n",
+    "df.head(5)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b16d691",
+   "id": "4e640d08",
    "metadata": {},
    "outputs": [],
    "source": []
