--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -11,6 +11,62 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "cba136f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: beautifulsoup4==4.12.3 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 1)) (4.12.3)\n",
+      "Requirement already satisfied: numpy==1.26.4 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 2)) (1.26.4)\n",
+      "Requirement already satisfied: pandas==2.2.2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 3)) (2.2.2)\n",
+      "Requirement already satisfied: requests==2.31.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 4)) (2.31.0)\n",
+      "Requirement already satisfied: selenium==4.21.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 5)) (4.21.0)\n",
+      "Requirement already satisfied: tqdm==4.66.4 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 6)) (4.66.4)\n",
+      "Requirement already satisfied: urllib3==1.26.20 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 7)) (1.26.20)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from beautifulsoup4==4.12.3->-r requirements.txt (line 1)) (2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas==2.2.2->-r requirements.txt (line 3)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas==2.2.2->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas==2.2.2->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from requests==2.31.0->-r requirements.txt (line 4)) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from requests==2.31.0->-r requirements.txt (line 4)) (3.6)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from requests==2.31.0->-r requirements.txt (line 4)) (2024.2.2)\n",
+      "Requirement already satisfied: trio~=0.17 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from selenium==4.21.0->-r requirements.txt (line 5)) (0.25.1)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from selenium==4.21.0->-r requirements.txt (line 5)) (0.11.1)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from selenium==4.21.0->-r requirements.txt (line 5)) (4.12.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from tqdm==4.66.4->-r requirements.txt (line 6)) (0.4.6)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from python-dateutil>=2.8.2->pandas==2.2.2->-r requirements.txt (line 3)) (1.16.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (23.2.0)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (2.4.0)\n",
+      "Requirement already satisfied: outcome in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (1.3.1)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (1.16.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio-websocket~=0.9->selenium==4.21.0->-r requirements.txt (line 5)) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from urllib3[socks]<3,>=1.26->selenium==4.21.0->-r requirements.txt (line 5)) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from cffi>=1.14->trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium==4.21.0->-r requirements.txt (line 5)) (0.14.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: C:\\Users\\user\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "## jalankan ini dahulu sebelum running\n",
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ecadb752",
    "metadata": {},
    "outputs": [],
@@ -18,21 +74,22 @@
     "## global\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
+    "import numpy as np\n",
+    "from bs4 import BeautifulSoup #scraping web statis\n",
     "import time\n",
-    "from tqdm import tqdm\n",
+    "from tqdm import tqdm #info progress\n",
     "\n",
-    "## selenium\n",
+    "## selenium, scraping web dinamis\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "from urllib.parse import quote_plus"
+    "from urllib.parse import quote_plus #parsing string \"spasi\" menjadi \"+\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f23bd6ba",
    "metadata": {},
    "outputs": [
@@ -62,12 +119,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0b3bb7b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape_tempo(url: str) -> pd.DataFrame: ##Fungsi melakukan scraping data 1 halaman Tempo, masukkan string url\n",
+    "##Fungsi melakukan scraping data 1 halaman Tempo, masukkan string url\n",
+    "def scrape_tempo(url: str) -> pd.DataFrame: \n",
     "    ## Inisiasi dictionary hasil\n",
     "    hasil = {}\n",
     "\n",
@@ -77,11 +135,11 @@
     "\n",
     "        ##Judul\n",
     "        judul = soup.find('h1', class_='text-[26px] font-bold leading-[122%] text-neutral-1200')\n",
-    "        hasil['judul'] = judul.get_text(strip=True) if judul else 'Tidak ditemukan'\n",
+    "        hasil['judul'] = judul.get_text(strip=True) if judul else np.nan\n",
     "\n",
     "        ## Sub judul\n",
     "        sub_judul = soup.find('div', class_='font-roboserif leading-[156%] text-neutral-1100')\n",
-    "        hasil['sub_judul'] = sub_judul.get_text(strip=True) if sub_judul else 'Tidak ditemukan'\n",
+    "        hasil['sub_judul'] = sub_judul.get_text(strip=True) if sub_judul else np.nan\n",
     "\n",
     "        ## Isi berita\n",
     "        isi_paragraf = []\n",
@@ -94,7 +152,7 @@
     "                if teks:  #menambahkan teks bila ada\n",
     "                    isi_paragraf.append(teks)\n",
     "        ringkasan = '\\n\\n'.join(isi_paragraf)\n",
-    "        hasil['isi'] = ringkasan if ringkasan else 'Tidak ditemukan'\n",
+    "        hasil['isi'] = ringkasan if ringkasan else np.nan\n",
     "\n",
     "        ## Tanggal & Jam publikasi\n",
     "        tanggal_publikasi = soup.find('p', class_='text-neutral-900 text-sm')\n",
@@ -106,14 +164,14 @@
     "                hasil['jam'] = jam\n",
     "            else:\n",
     "                hasil['tanggal'] = waktu\n",
-    "                hasil['jam'] = 'Tidak ditemukan'\n",
+    "                hasil['jam'] = np.nan\n",
     "        else:\n",
-    "            hasil['tanggal'] = 'Tidak ditemukan'\n",
-    "            hasil['jam'] = 'Tidak ditemukan'\n",
+    "            hasil['tanggal'] = np.nan\n",
+    "            hasil['jam'] = np.nan\n",
     "\n",
     "        ## Kategori\n",
     "        kategori = soup.find('span', class_='text-sm font-medium text-primary-main')\n",
-    "        hasil['kategori'] = kategori.get_text(strip=True) if kategori else 'Tidak ditemukan'\n",
+    "        hasil['kategori'] = kategori.get_text(strip=True) if kategori else np.nan\n",
     "\n",
     "        ## Link\n",
     "        hasil['link'] = url \n",
@@ -130,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "0a04d85e",
    "metadata": {},
    "outputs": [
@@ -193,7 +251,7 @@
        "0   Bisnis  https://www.tempo.co/ekonomi/potensi-masalah-d...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "868f5cfc",
    "metadata": {},
    "outputs": [],
@@ -224,12 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bc8954ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrape_tempo_search_selenium(kata_kunci: str, halaman: int) -> pd.DataFrame:\n",
+    "##Fungsi melakukan scraping URL Tempo, masukkan string keyword dan max halaman\n",
+    "def scrape_tempo_search_selenium(kata_kunci: str, halaman: int) -> pd.DataFrame: \n",
     "    # Set User-Agent\n",
     "    user_agent = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36'\n",
     "    opts = Options()\n",
@@ -284,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "46b6ac67",
    "metadata": {},
    "outputs": [
@@ -292,7 +351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [02:23<00:00, 14.38s/it]\n"
+      "100%|██████████| 10/10 [01:57<00:00, 11.78s/it]\n"
      ]
     },
     {
@@ -418,7 +477,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +491,7 @@
    "id": "f64e6359",
    "metadata": {},
    "source": [
-    "## 3. Scraping artikel dalam links"
+    "## 3. Scraping artikel dalam URLs"
    ]
   },
   {
@@ -442,6 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##Fungsi melakukan scraping data dari hasil crawling URL Tempo, masukkan csv\n",
     "def scrape_tempo_dari_csv(path_csv: str) -> pd.DataFrame:\n",
     "    # Membaca CSV hasil scraping link\n",
     "    df_links = pd.read_csv(path_csv)\n",
@@ -470,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "6de1ea70",
    "metadata": {},
    "outputs": [
@@ -478,7 +538,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [02:41<00:00,  1.61s/it]"
+      "100%|██████████| 100/100 [02:37<00:00,  1.57s/it]"
      ]
     },
     {
@@ -610,7 +670,7 @@
        "4   Bisnis  https://www.tempo.co/ekonomi/bos-bgn-membantah...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,12 +681,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e640d08",
+   "cell_type": "markdown",
+   "id": "a8879e2c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Next: Analisis Sentimen"
+   ]
   }
  ],
  "metadata": {
